# solar_workspace

./: CHANGELOG.md  Cargo.toml  README.md  config.semver.json  deny.toml
.github/workflows/: release.yml  test.yml
.hooks/: commit-msg  pre-commit
.release/: semver-cargo  semver-release
LICENSES/: BSD-3-Clause  ISC  MIT-0
LICENSES/LICENSES/: Apache-2.0
cargo-solar/: Cargo.toml  build.rs
cargo-solar/src/: args.rs  main.rs
commit-rules/: conventional-commits.yml
solar-core/: Cargo.toml  README.md
solar-core/src/: global.rs  lib.rs  licenses_spdx.rs  solar_error.rs  spdx.rs  subcommand.rs  terminal.rs  tool.rs
solar-core/src/licenses_spdx/: license_0bsd.rs  license_3_28_0_2026_02_20.rs  license_3d_slicer_1_0.rs  license_aal.rs  license_abstyles.rs  license_adacore_doc.rs  license_adobe_2006.rs  license_adobe_display_postscript.rs  license_adobe_glyph.rs  license_adobe_utopia.rs  license_adsl.rs  license_advanced_cryptics_dictionary.rs  license_afl_1_1.rs  license_afl_1_2.rs  license_afl_2_0.rs  license_afl_2_1.rs  license_afl_3_0.rs  license_afmparse.rs  license_agpl_1_0.rs  license_agpl_1_0_only.rs  license_agpl_1_0_or_later.rs  license_agpl_3_0.rs  license_agpl_3_0_only.rs  license_agpl_3_0_or_later.rs  license_aladdin.rs  license_alglib_documentation.rs  license_amd_newlib.rs  license_amdplpa.rs  license_aml.rs  license_aml_glslang.rs  license_ampas.rs  license_antlr_pd.rs  license_antlr_pd_fallback.rs  license_any_osi.rs  license_any_osi_perl_modules.rs  license_apache_1_0.rs  license_apache_1_1.rs  license_apache_2_0.rs  license_apafml.rs  license_apl_1_0.rs  (+688 more)
solar-core/src/subcommand/: init.rs  install.rs  new.rs  remove.rs  uninstall.rs  upgrade.rs
solar-core/src/tool/: cargo_deny.rs  commitalyzer.rs  github_workflows.rs  github_workspaces.rs  licenses.rs  pre_commit.rs  semver_release.rs  vhooks.rs
solar-core/src/tool/github_workflows/: release.rs  test.rs
solar-core/src/tool/github_workflows/release/: bin_release.rs  lib_release.rs
solar-core/src/tool/github_workflows/test/: general_test.rs
