[package]
name = "cargo-solar"
version = "0.0.0"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "Cargo tool for automating use of the solar framework used for building rust projects."
license  = "MIT OR Apache-2.0"
repository = "https://github.com/nraynes/semver-common"
keywords = ["solar", "framework", "cargo", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/",
    "examples/",
    "Cargo.toml",
    "../LICENSES/",
    "LICENSE",
    "README.md",
    "../CHANGELOG.md",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
semver-common = "1.2.4"
solar-core = { version = "0.0.0", path = "../solar-core" }

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"
solar-core = { version = "0.0.0", path = "../solar-core" }

[[bin]]
name = "cargo-solar"
path = "src/main.rs"
