[package]
name = "solar-core"
version = "0.0.1"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "Core library for cargo-solar command."
license  = "MIT OR Apache-2.0"
repository = "https://github.com/nraynes/solar_workspace"
keywords = ["solar", "framework", "cargo", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/",
    "examples/",
    "Cargo.toml",
    "../LICENSES/",
    "LICENSE",
    "README.md",
    "../CHANGELOG.md",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
const_format = "0.2.36"
reqwest = { version = "0.13.3", features = ["blocking"] }
rust-alert = "0.3.0"
rust-terminal = "0.1.1"
scraper = "0.27.0"
spdx = "0.13.4"
strum = "0.28.0"
strum_macros = "0.28.0"
url = "2.5.8"
